rbx_xml/tests/snapshots/basic__write_empty_tags.snap
---
source: rbx_xml/tests/basic.rs
expression: "std::str::from_utf8(&encoded).unwrap()"

---
<roblox version="4">
  <Item class="Part" referent="0">
    <Properties>
      <string name="Name">Part</string>
      <BinaryString name="Tags"></BinaryString>
    </Properties>
  </Item>
</roblox>
